# rust-uritemplate

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/uritemplate/: trait.IntoTemplateVar.js
src/: lib.rs  percent_encoding.rs  templatevar.rs
src/uritemplate/: lib.rs.html  percent_encoding.rs.html  templatevar.rs.html
tests/: extended_tests.rs  spec_examples.rs  spec_examples_by_section.rs  test_uritemplate.rs
uritemplate/: UriTemplate.t.html  enum.TemplateVar.html  index.html  sidebar-items.js  struct.UriTemplate.html  trait.IntoTemplateVar.html
uritemplate/templatevar/: IntoTemplateVar.t.html  TemplateVar.t.html  enum.TemplateVar.html  trait.IntoTemplateVar.html
