[package]
name = "uritemplate"
version = "0.1.2"
authors = ["Amit <amitc97@gmail.com>"]
description = """Rust implementation of RFC6570 - URI Template that can process\
 URI Templates up and to including ones designated Level 4."""
documentation = "https://chowdhurya.github.io/rust-uritemplate/uritemplate/"
homepage = "https://github.com/chowdhurya/rust-uritemplate/"
repository = "https://github.com/chowdhurya/rust-uritemplate/"
readme = "README.md"
keywords = [
  "uritemplates",
  "URL",
  "URI",
  "template",
  "RFC6570"
]
license = "BSD-3-Clause"

[dependencies]
regex = "0.1.69"
